Added images folder to contain recipe pictures. Added ingredients and steps to charquican recipe.

--- a/recipes/charquican.html
+++ b/recipes/charquican.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>"Charquican recipe</title>
-        <meta charset="utf-8">
-    </head>
 
-    <body>
-        <h1>Charquican de mi abuelita</h1>
-        
-    </body>
+<head>
+    <title>"Charquican recipe</title>
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <h1>Charquican de mi abuelita</h1>
+
+    <img src="../img/charquican.jpg" alt="Finished plate of charquican">
+
+    <h2>Description</h2>
+    <p>
+        Charquicán is a very seasonal dish in Chile. I mean, if it is summer and in-season green beans, peas, corn are
+        added. Same with other vegetables. It is still cooked with pumpkin and the always faithful potatoes if it is
+        winter.
+    </p>
+    <p>
+        The name derives from the use of jerky in the preparation. Charqui (jerky) is any smoked and dried meat. It
+        could be horse jerky, beef, or even fish. Before refrigerators were popular, this is how meat was preserved.
+        Now, it is more common to make it with fresh meat, but the name remains.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 small yellow onion, diced small</li>
+        <li>1 lb ground beef</li>
+        <li>1/2 lb winter squash, peeled and cubed</li>
+        <li>5 red potatos, peeled and cubed</li>
+        <li>1 tsp paprika</li>
+        <li>1/2 tsp dried oregani</li>
+        <li>2 cups vegetable broth</li>
+        <li>pinch of cumin</li>
+        <li>1/2 cup each of: corn, green peas or green beans</li>
+        <li>salt, pepper, oil</li>
+        <li>6 eggs for the top, optional</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <il>In oiled skillet on medium heat, cook onion for ~6-8 minutes until soft</il>
+        <li>Add the meat and saute for 6 minutes</li>
+        <li>Add the squash, potatos, pepper, oregano, cumin, and paprika. Stir in the broth and cook covered for 15 minutes. Reduce heat if needed</li>
+        <li>Mash potatos and squas (fork works fine)</li>
+        <li>Add the rest of the veggies. Stir and cook for 3-4 minutes until hot</li>
+        <li>Fry the eggs if using</li>
+        <li>Taste and adjust seasoning if necessary, serve with fried egg on top</li>
+    </ol>
+
+</body>
+
 </html>
