--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Recipe Project</title>
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        
+        <a href="./recipes/charquican.html">Charquican</a>
     </body>
 </html>
