Added marraqueta recipe and image

--- a/recipes/charquican.html
+++ b/recipes/charquican.html
@@ -40,7 +40,7 @@
 
     <h2>Steps</h2>
     <ol>
-        <il>In oiled skillet on medium heat, cook onion for ~6-8 minutes until soft</il>
+        <li>In oiled skillet on medium heat, cook onion for ~6-8 minutes until soft</li>
         <li>Add the meat and saute for 6 minutes</li>
         <li>Add the squash, potatos, pepper, oregano, cumin, and paprika. Stir in the broth and cook covered for 15 minutes. Reduce heat if needed</li>
         <li>Mash potatos and squas (fork works fine)</li>
