Added final recipe, mote con huesillo

--- a/recipes/charquican.html
+++ b/recipes/charquican.html
@@ -30,7 +30,7 @@
         <li>1/2 lb winter squash, peeled and cubed</li>
         <li>5 red potatos, peeled and cubed</li>
         <li>1 tsp paprika</li>
-        <li>1/2 tsp dried oregani</li>
+        <li>1/2 tsp dried oregano</li>
         <li>2 cups vegetable broth</li>
         <li>pinch of cumin</li>
         <li>1/2 cup each of: corn, green peas or green beans</li>
