added links to other recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/charquican.html">Charquican</a>
+        <ul>
+        <li><a href="./recipes/charquican.html">Charquican</a></li>
+        <li><a href="./recipes/marraqueta.html">Marraqueta</a></li>
+        <li><a href="./recipes/mote-huesillo.html">Mote con Huesillo</a></li>
+        </ul>
     </body>
 </html>
