fixed some spellings

--- a/recipes/charquican.html
+++ b/recipes/charquican.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>"Charquican recipe</title>
+    <title>"Charquicán recipe</title>
     <meta charset="utf-8">
 </head>
 
 <body>
-    <h1>Charquican de mi abuelita</h1>
+    <h1>Charquicán</h1>
 
-    <img src="../img/charquican.jpg" alt="Finished plate of charquican">
+    <img src="../img/charquican.jpg" alt="Finished plate of charquicán">
 
     <h2>Description</h2>
     <p>
