--- a/recipes/marraqueta.html
+++ b/recipes/marraqueta.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Chilean Marraqueta</h1>
 
-    <img src="../img/marraqueta.jpg" alt="Crusty marraqueta loaf">
+    <img src="../img/marraqueta.jpg" alt="Fresh marraqueta loaf">
 
     <h2>Description</h2>
     <p>
