Fixed title of homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Some delish Chilean recipes</h1>
         <ul>
         <li><a href="./recipes/charquican.html">Charquican</a></li>
         <li><a href="./recipes/marraqueta.html">Marraqueta</a></li>
